# jukebox

./: .env  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_api_tokens.py  0003_queue_and_runtime.py  0004_participants_and_votes.py  0005_participant_google_profile.py  0006_youtube_api_key_daily_usage.py  0007_api_token_prefix.py  0008_queue_submitter_fk.py
backend/app/: bootstrap.py  config.py  database.py  main.py  middleware.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  auth_google.py  event_config.py  health.py  participant.py  queue.py  state.py  tokens.py  votes.py  youtube.py
backend/app/services/: google_oauth_service.py  notification_service.py  participant_session.py  queue_service.py  search_rate_limiter.py  sse_hub.py  state_service.py  (+5 more)
backend/jukebox_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_auth_policy.py  test_bootstrap.py  test_cors.py  test_event_config.py  test_health.py  test_notifications.py  test_oauth_google.py  test_participant_auth.py  test_participant_submissions.py  test_participant_submit.py  test_queue.py  test_queue_submitter_fk.py  test_quota_reset.py  test_rate_limiter.py  test_sse.py  test_state.py  test_submit_metadata_consistency.py  test_token_prefix.py  test_tokens.py  test_votes.py  test_youtube_api_key_usage.py  test_youtube_meta.py  test_youtube_search.py
(+188 files in other folders)
