[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jukebox-backend"
version = "0.1.0"
description = "FastAPI backend for the amrn-jukebox collaborative YouTube queue"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
